--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,15 +17,9 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar_activity"
-                android:layout_width="match_parent"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                android:layout_height="?attr/actionBarSize"
-                android:background="#F4F9FD">
-
+       
                 <LinearLayout
-                    android:id="@+id/search_layout"
+                    android:id="@+id/citydialog"
                     android:layout_width="match_parent"
                     android:layout_below="@+id/view_toolbar"
                     android:layout_height="wrap_content"
@@ -33,29 +27,45 @@
                     android:layout_marginRight="@dimen/_5sdp"
                     android:layout_marginLeft="@dimen/_5sdp"
                     android:orientation="horizontal">
-
-                    <EditText
-                        android:id="@+id/search"
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="@dimen/_230sdp"
+                        android:layout_height="@dimen/_40sdp"
+                        android:layout_margin="@dimen/_5sdp"
+                        app:cardCornerRadius="@dimen/_5sdp">
+                    <TextView
+                        android:id="@+id/city"
                         android:imeOptions="actionSearch"
-                        android:layout_width="match_parent"
+                        android:layout_width="@dimen/_200sdp"
                         android:layout_height="@dimen/_30sdp"
-                        android:background="@drawable/searchboxhome"
                         android:layout_gravity="left"
                         android:drawableTint="@color/black"
-                        android:backgroundTint="#F4F9FD"
                         android:drawableLeft="@drawable/searchedit"
                         android:hint="@string/search_your_favorite_restaurant"
                         android:singleLine="true"
                         android:textColor="@color/black"
                         android:paddingLeft="@dimen/_12sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
                         android:layout_marginLeft="@dimen/_5sdp"
                         android:layout_marginRight="@dimen/_5sdp"
+                        android:gravity="center"
                         android:textColorHint="@color/belowline_color"
                         android:textSize="12dp" />
-
+                    </androidx.cardview.widget.CardView>
+                    <View
+                        android:layout_width="@dimen/_5sdp"
+                        android:layout_height="@dimen/_30sdp"/>
+                    <TextView
+                        android:id="@+id/tv_search_txt"
+                        android:layout_width="@dimen/_35sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:background="@color/colorPrimary"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:text="GO"
+                        android:textColor="#fff" />
 
                 </LinearLayout>
-            </androidx.appcompat.widget.Toolbar>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -69,7 +79,7 @@
 
 
                 <LinearLayout
-                    android:id="@+id/citydialog"
+                    android:id="@+id/citydialogg"
                     android:layout_width="0dp"
                     android:layout_height="45dp"
                     android:layout_weight="1.3"
@@ -77,7 +87,7 @@
 
 
                     <TextView
-                        android:id="@+id/city"
+                        android:id="@+id/cityy"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="5dp"
@@ -153,7 +163,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/tv_search_txt"
+                    android:id="@+id/tv_search_txtt"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.4"
@@ -259,7 +269,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/quickrecycler"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_200" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
             <TextView
@@ -288,6 +298,8 @@
                     android:layout_height="match_parent"/>
             </LinearLayout>
 
+
+
             <TextView
                 android:id="@+id/popular"
                 android:layout_width="match_parent"
@@ -310,6 +322,84 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/popularnearrecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/new_on_just_food"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="New On Just Foodz"
+                android:textSize="17sp"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="@dimen/dp_20"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight=".1"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/newjustfoodzrecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/must_try_restaurant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="Must Try Restaurant"
+                android:textSize="17sp"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="@dimen/dp_20"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight=".1"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/musttryrestaurantrecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/special_offer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="Special Offer"
+                android:textSize="17sp"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="@dimen/dp_20"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight=".1"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/specialofferrecycler"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
             </LinearLayout>
@@ -368,6 +458,7 @@
                 android:layout_marginTop="10dp"
                 android:text="Loved by you, delivered by us"
                 android:textColor="@color/black"
+                android:visibility="gone"
                 android:textSize="17sp"
                 android:textStyle="bold" />
 
@@ -378,6 +469,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="20dp"
+                android:visibility="gone"
                 android:layout_weight=".1"
                 android:orientation="vertical">
 
@@ -386,6 +478,33 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_200" />
             </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_20"
+                android:text="National Brands"
+                android:textColor="@color/black"
+                android:textSize="17sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_weight=".1"
+                android:orientation="vertical">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/nationalbrandsrecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_200" />
+            </LinearLayout>
+
+
         </LinearLayout>
 
     </ScrollView>
