--- a/app/src/main/res/layout/newfoodzlayout.xml
+++ b/app/src/main/res/layout/newfoodzlayout.xml
@@ -11,7 +11,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_1sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:orientation="vertical">
             <ImageView
                 android:id="@+id/featuredimage"
@@ -19,44 +19,25 @@
                 android:layout_height="@dimen/dp_150"
                 android:scaleType="fitXY"
                 android:background="@drawable/noimage"/>
-
-            <RelativeLayout
-                android:id="@+id/lnr_featured"
+            <TextView
+                android:id="@+id/featuredname"
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="@string/calamar"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:layout_marginRight="10dp"
                 android:layout_below="@+id/featuredimage"
-                android:layout_marginTop="5dp"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/featuredname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:text="@string/calamar"
-                    android:layout_alignParentLeft="true"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="@dimen/dp_10"
-                   />
-
-                <ImageView
-                    android:id="@+id/likeimage"
-                    android:layout_width="@dimen/_25sdp"
-                    android:layout_height="@dimen/_25sdp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="@dimen/_5sdp"
-                    android:background="@drawable/heart"/>
-            </RelativeLayout>
-
-
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="5dp"/>
             <LinearLayout
                 android:id="@+id/review_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:visibility="gone"
-                android:layout_below="@+id/lnr_featured"
+                android:layout_below="@+id/featuredname"
                 android:layout_marginLeft="15dp">
                 <ImageView
                     android:id="@+id/review_1"
@@ -107,6 +88,13 @@
                 android:layout_below="@+id/review_layout"
                 android:layout_marginLeft="@dimen/dp_10"
                 android:layout_marginRight="10dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_below="@+id/featuredaddress"
+                android:layout_height="wrap_content">
 
             <LinearLayout
                 android:id="@+id/lnr_cusine"
@@ -206,7 +194,6 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/txt_rating"
                         android:layout_width="wrap_content"
                         android:text="4.8"
                         android:textSize="13sp"
@@ -302,7 +289,7 @@
                         android:layout_height="@dimen/_30sdp">
                         <ImageView
                             android:layout_width="@dimen/_20sdp"
-                            android:background="@drawable/minimumorder"
+                            android:background="@drawable/pre_order"
                             android:layout_gravity="center"
                             android:layout_height="@dimen/_20sdp"/>
                     </LinearLayout>
@@ -419,6 +406,7 @@
                     android:textStyle="bold"
                     android:layout_weight=".1"
                     android:background="@drawable/rectanglegray"/>
+            </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
