--- a/app/src/main/res/layout/specialofferlayout.xml
+++ b/app/src/main/res/layout/specialofferlayout.xml
@@ -1,11 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <com.justfoodz.utils.CircleImageView
+        android:id="@+id/offer_image"
+        android:layout_width="@dimen/_180sdp"
+        android:layout_height="@dimen/_180sdp"
+        android:padding="@dimen/_5sdp"
+        android:src="@drawable/noimagecircle" />
+    <TextView
+        android:id="@+id/img_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/offer_image"
+        android:layout_alignRight="@+id/offer_image"
+        android:text=""
+        android:textStyle="bold"
+        android:textSize="@dimen/_17ssp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center"
+        android:textColor="@color/white" />
+    <View
+        android:layout_width="@dimen/_10sdp"
+        android:layout_toRightOf="@+id/offer_image"
+        android:layout_height="@dimen/_200sdp"/>
     <androidx.cardview.widget.CardView
         android:layout_width="@dimen/dp_350"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_marginBottom="@dimen/_20sdp"
         android:layout_margin="@dimen/dp_10">
         <RelativeLayout
@@ -19,44 +44,25 @@
                 android:layout_height="@dimen/dp_150"
                 android:scaleType="fitXY"
                 android:background="@drawable/noimage"/>
-
-            <RelativeLayout
-                android:id="@+id/lnr_featured"
+            <TextView
+                android:id="@+id/featuredname"
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="@string/calamar"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:layout_marginRight="10dp"
                 android:layout_below="@+id/featuredimage"
-                android:layout_marginTop="5dp"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/featuredname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:text="@string/calamar"
-                    android:layout_alignParentLeft="true"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="@dimen/dp_10"
-                   />
-
-                <ImageView
-                    android:id="@+id/likeimage"
-                    android:layout_width="@dimen/_25sdp"
-                    android:layout_height="@dimen/_25sdp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="@dimen/_5sdp"
-                    android:background="@drawable/heart"/>
-            </RelativeLayout>
-
-
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="5dp"/>
             <LinearLayout
                 android:id="@+id/review_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:visibility="gone"
-                android:layout_below="@+id/lnr_featured"
+                android:layout_below="@+id/featuredname"
                 android:layout_marginLeft="15dp">
                 <ImageView
                     android:id="@+id/review_1"
@@ -206,7 +212,6 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/txt_rating"
                         android:layout_width="wrap_content"
                         android:text="4.8"
                         android:textSize="13sp"
@@ -302,7 +307,7 @@
                         android:layout_height="@dimen/_30sdp">
                         <ImageView
                             android:layout_width="@dimen/_20sdp"
-                            android:background="@drawable/minimumorder"
+                            android:background="@drawable/pre_order"
                             android:layout_gravity="center"
                             android:layout_height="@dimen/_20sdp"/>
                     </LinearLayout>
@@ -422,4 +427,4 @@
             </LinearLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+</RelativeLayout>
